# proto-mapper

./: .gitignore  COPYRIGHT  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  publish.yml
proto-mapper-core/: Cargo.toml  README.md
proto-mapper-core/src/: lib.rs  proto_enum.rs  proto_map.rs  proto_struct.rs
proto-mapper-core/src/enums/: attrs.rs  mod.rs  prost_enum.rs  protobuf_enum.rs
proto-mapper-core/src/structs/: attrs.rs  mod.rs  prost_field.rs  protobuf_field.rs  struct.rs  structs.rs
proto-mapper-core/src/tests/: implement_enum_prost_tests.rs  implement_enum_protobuf_tests.rs  implement_struct_prost_tests.rs  implement_struct_protobuf_tests.rs  mod.rs  parse_enum_tests.rs  parse_struct_tests.rs  type_scanner_tests.rs
proto-mapper-core/src/types/: mod.rs  nested_type.rs  ty.rs  type_scanner.rs
proto-mapper-derive/: Cargo.toml  README.md
proto-mapper-derive/src/: lib.rs
src/: lib.rs  proto_mapper.rs  uuid.rs
tests/: all_tests.rs  enum_entity_tests.rs  experimental_prost.rs  manual_implementation_tests.rs  nested_entity_tests.rs  option_fields_tests.rs  prost_tests.rs  protobuf_tests.rs  struct_entity_attribute_tests.rs  struct_entity_tests.rs  struct_uuid_tests.rs
tests/prost/: enum_entity_tests.rs  manual_implementation_tests.rs  mod.rs  struct_entity_optional_tests.rs  struct_entity_tests.rs  struct_scalar_custom_mappings_tests.rs
tests/proto/: entities.proto  mod.rs  timestamps.proto
tests/protobuf/: enum_entity_tests.rs  manual_implementation_tests.rs  mod.rs  nested_entity_tests.rs  option_fields_tests.rs  struct_entity_attribute_tests.rs  struct_entity_optional_tests.rs  struct_entity_tests.rs  struct_scalar_custom_mappings_tests.rs  struct_uuid_tests.rs
