[package]
version = "0.1.0"
name = "proto-mapper"
description = "A Macro library for easier mapping between custom models and proto generated code"
repository = "https://github.com/fpaschos/proto-mapper"
readme = "README.md"
authors = ["Fotis Paschos"]
keywords = ["macros", "protobuf", "prost"]
categories = ["development-tools", "rust-patterns"]
homepage = "https://github.com/fpaschos/proto-mapper"
edition = "2021"

[lib]

[workspace]
resolver = "2"
members = ["proto-mapper-core", "proto-mapper-derive"]

[dependencies]
proto-mapper-derive = { path = "proto-mapper-derive" }
anyhow = "1.0.75"


[dev-dependencies]
prost = "0.12.1"
protobuf = "3.3.0"
uuid = { version = "1.5.0", features = ["v4"] }


[build-dependencies]
protobuf-codegen = "3.3.0"
prost-build = "0.12.1"

[features]
prost = ["proto-mapper-derive/prost"]
protobuf = ["proto-mapper-derive/protobuf"]